--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
 		<packageDescription>Guthaben fürs WCF (Basispaket)</packageDescription>
 		<standalone>0</standalone>
 		<version>0.9.0</version>
-		<date>2008-11-01</date>
+		<date>2009-05-31</date>
 		<plugin>com.woltlab.wcf</plugin>
 	</packageInformation>
 
@@ -18,7 +18,7 @@
 	</authorInformation>
 
 	<requiredpackages>
-		<requiredpackage>com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.1.0 Beta 1">com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
 
 	<instructions type="install">
@@ -41,6 +41,14 @@
 
 	<instructions type="update" fromversion="0.8.6">
 		<files>files.tar</files>
+		<languages languagecode="de">de.utf-8.xml</languages>
+		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
+		<pagemenu>pagemenu.xml</pagemenu>
+	</instructions>
+	
+	<instructions type="update" fromversion="0.8.7">
+		<files>files.tar</files>
+		<pagemenu>pagemenu.xml</pagemenu>
 		<languages languagecode="de">de.utf-8.xml</languages>
 		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
 	</instructions>
