--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
 	</authorInformation>
 
 	<requiredpackages>
-		<requiredpackage minversion="1.1.0 Beta 1">com.woltlab.wcf</requiredpackage>
+		<requiredpackage>com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
 
 	<instructions type="install">
@@ -31,6 +31,7 @@
 		<eventlistener>eventlistener.xml</eventlistener>
 		<templates>templates.tar</templates>
 		<pagemenu>pagemenu.xml</pagemenu>
+		<headermenu>headermenu.xml</headermenu>
 		<pagelocation>pagelocation.xml</pagelocation>
 		<groupoptions>groupoptions.xml</groupoptions>
 		<packageinstallationplugins>pip.tar</packageinstallationplugins>
