--- a/package.xml
+++ b/package.xml
@@ -7,8 +7,8 @@
 		<isUnique>1</isUnique>
 		<packageDescription>Guthaben fürs WCF (Basispaket)</packageDescription>
 		<standalone>0</standalone>
-		<version>0.9.0</version>
-		<date>2009-05-31</date>
+		<version>0.9.2</version>
+		<date>2009-10-11</date>
 		<plugin>com.woltlab.wcf</plugin>
 	</packageInformation>
 
@@ -18,7 +18,7 @@
 	</authorInformation>
 
 	<requiredpackages>
-		<requiredpackage>com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.1.0 RC3">com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
 
 	<instructions type="install">
@@ -31,7 +31,6 @@
 		<eventlistener>eventlistener.xml</eventlistener>
 		<templates>templates.tar</templates>
 		<pagemenu>pagemenu.xml</pagemenu>
-		<headermenu>headermenu.xml</headermenu>
 		<pagelocation>pagelocation.xml</pagelocation>
 		<groupoptions>groupoptions.xml</groupoptions>
 		<packageinstallationplugins>pip.tar</packageinstallationplugins>
@@ -52,6 +51,12 @@
 		<pagemenu>pagemenu.xml</pagemenu>
 		<languages languagecode="de">de.utf-8.xml</languages>
 		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
+	</instructions>
+	
+	<instructions type="update" fromversion="0.9*">
+		<files>files.tar</files>
+		<templates>templates.tar</templates>
+		<guthabenmainpage>mainpagemenu.xml</guthabenmainpage>
 	</instructions>
 
 </package>
