--- a/package.xml
+++ b/package.xml
@@ -7,8 +7,8 @@
 		<isUnique>1</isUnique>
 		<packageDescription>Guthaben fürs WCF (Basispaket)</packageDescription>
 		<standalone>0</standalone>
-		<version>0.9.2</version>
-		<date>2009-10-11</date>
+		<version>1.1_0.9.0 BETA 2</version>
+		<date>2009-10-13</date>
 		<plugin>com.woltlab.wcf</plugin>
 	</packageInformation>
 
@@ -38,25 +38,22 @@
 		<guthabenmainpage>mainpagemenu.xml</guthabenmainpage>
 		<guthabenprices>prices.xml</guthabenprices>
 	</instructions>
-
-	<instructions type="update" fromversion="0.8.6">
-		<files>files.tar</files>
-		<languages languagecode="de">de.utf-8.xml</languages>
-		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
-		<pagemenu>pagemenu.xml</pagemenu>
-	</instructions>
 	
 	<instructions type="update" fromversion="0.8.7">
 		<files>files.tar</files>
 		<pagemenu>pagemenu.xml</pagemenu>
 		<languages languagecode="de">de.utf-8.xml</languages>
 		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
+		<options>options.xml</options>
 	</instructions>
 	
-	<instructions type="update" fromversion="0.9*">
+	<instructions type="update" fromversion="1.1_0.9*">
 		<files>files.tar</files>
 		<templates>templates.tar</templates>
 		<guthabenmainpage>mainpagemenu.xml</guthabenmainpage>
+		<options>options.xml</options>
+		<languages languagecode="de">de.utf-8.xml</languages>
+		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
 	</instructions>
 
 </package>
