--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
 		<isUnique>1</isUnique>
 		<packageDescription>Guthaben fürs WCF (Basispaket)</packageDescription>
 		<standalone>0</standalone>
-		<version>1.1_0.9.0 BETA 2</version>
+		<version>1.1_0.9.0 BETA 3</version>
 		<date>2009-10-13</date>
 		<plugin>com.woltlab.wcf</plugin>
 	</packageInformation>
@@ -18,7 +18,7 @@
 	</authorInformation>
 
 	<requiredpackages>
-		<requiredpackage minversion="1.1.0 RC3">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.1.0">com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
 
 	<instructions type="install">
@@ -45,6 +45,15 @@
 		<languages languagecode="de">de.utf-8.xml</languages>
 		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
 		<options>options.xml</options>
+	</instructions>
+	
+	<instructions type="update" fromversion="0.9*">
+		<files>files.tar</files>
+		<templates>templates.tar</templates>
+		<guthabenmainpage>mainpagemenu.xml</guthabenmainpage>
+		<options>options.xml</options>
+		<languages languagecode="de">de.utf-8.xml</languages>
+		<languages languagecode="de-informal">de-informal.utf-8.xml</languages>
 	</instructions>
 	
 	<instructions type="update" fromversion="1.1_0.9*">
